# platter

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
assets/: min.gltf
src/: arguments.rs  assimp_path.rs  dir_watcher.rs  import.rs  import_gltf.rs  import_obj.rs  intermediate_to_noodles.rs  main.rs  methods.rs  object.rs  platter_state.rs  playground_state.rs  scene.rs  scene_import.rs
src/assimp_path/: assimp_import.rs  intermediate.rs  intermediate_to_noodles.rs
