[package]
name = "platter"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive", "cargo"] }
colabrodo_server = { git = 'https://github.com/InsightCenterNoodles/colabrodo', rev = "ef46e9ce4e0c95a18323df06eb77f222ea4e0ba4" }
colabrodo_common = { git = 'https://github.com/InsightCenterNoodles/colabrodo', rev = "ef46e9ce4e0c95a18323df06eb77f222ea4e0ba4" }
env_logger = "0.10.0"
log = "0.4"
notify = { version = "5.1", default-features = false, features = ["macos_kqueue"] }
russimp = { version = "2.0", features = ["static-link"], optional=true }
nalgebra = "0.32"
num-traits = "0.2.15"
gltf = "1.1"
anyhow = "1.0.70"
url = "2.4.0"

[dependencies.uuid]
version = "1.3"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]


[features]
use_assimp = ["dep:russimp"]

[dev-dependencies]
approx = "0.5.1"
